--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "web-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.4",
-    "handlebars": "^4.7.7",
-    "hbs": "^4.0.1",
-    "request": "^2.88.2"
-  }
+	"name": "web-server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node src/app.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"express": "^4.16.4",
+		"handlebars": "^4.7.7",
+		"hbs": "^4.0.1",
+		"request": "^2.88.2"
+	}
 }
