--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node src/app.js"
+		"start": "node src/app.js",
+		"dev": "nodemon src/app.js -e js,hbs"
 	},
 	"keywords": [],
 	"author": "",
@@ -13,6 +14,10 @@
 		"express": "^4.16.4",
 		"handlebars": "^4.7.7",
 		"hbs": "^4.0.1",
+		"node": "^19.1.0",
 		"request": "^2.88.2"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.20"
 	}
 }
